2009-08-18  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: The content property must be specified on
	the type that contains the property, inheritance should be
	ignored.

	r:jeff

2009-08-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* INativeEventObjectWrapper.cs: Refactored out EventObject code from
	INativeDependencyObjectWrapper into INativeEventObjectWrapper.

	* ToggleRef.cs: Change API to use INativeEventObjectWrapper instead
	of INativeDependencyObjectWrapper.

	* NativeDependencyObjectHelper.cs: Add a FreeNativeMapping method
	and change method signatures to use INativeEventObjectWrapper instead
	of INativeDependencyObjectWrapper whenever required.

	* MarkupExpressionParser.cs: Update according to API changes in 
	NativeDependencyObjectHelper.

	* INativeDependencyObjectWrapper.cs: Make this interface inherit from
	INativeEventObjectWrapper.

	* Events.cs: Updated according to API changes in RoutedEventArgs.

	r: andreia

2009-08-14  Jeffrey Stedfast  <fejj@novell.com>

	* StreamWrapper.cs: Added a Close() method so native code can
	close the stream when it is done with it (needed to fix leaking of
	Resource streams). Also simplified some of the methods by getting
	rid of unneeded variables.

	r:kangaroo

2009-08-12  Alan McGovern  <amcgovern@novell.com>

	* NativeMethods.cs:
	* GeneratedPInvokes.cs: regen r: toshok

2009-08-12  Chris Toshok  <toshok@ximian.com>

	* GeneratedPInvokes.cs: regen.

2009-08-12  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Handle converting ints to enum
	values. This is done in the parser instead of the converter
	because data binding can't do this.
	
2009-08-11  Jackson Harper  <jackson@ximian.com>

	* NativeDependencyObjectHelper.cs: Add SKEWTRANSFORM to the
	switch.

2009-08-10  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs:
	* ManagedXamlLoader.cs: Allow markup on non FrameworkElement
	objects.  StaticResources should work on non FEs and setting a