@@ -181,7 +181,7 @@ namespace Mono.Xaml {
 			string prop = GetNextPiece (ref expression, out next, false);
 			FrameworkTemplate template = GetParentTemplate ();
 
-			tb.Target = (FrameworkElement)target;
+			tb.Target = target as FrameworkElement;
 			tb.TargetPropertyName = attribute_name;
 			tb.SourcePropertyName = prop;
 			// tb.Source will be filled in elsewhere between attaching the change handler.
