@@ -1,3 +1,9 @@
+2009-08-20  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Data/BindingTest.cs: Applying a
+	  TemplateBinding to a non-framework element should silently
+	  discard the binding. r: jackson
+
 2009-08-20  Jackson Harper  <jackson@ximian.com>
 
 	* System.Windows.Markup/XamlReaderTest.cs: Expand test a little
