@@ -1,3 +1,10 @@
+2009-08-20  Alan McGovern  <amcgovern@novell.com>
+
+	* ManagedXamlLoader.cs:
+	* MarkupExpressionParser.cs: Applying a TemplateBinding to a
+	  non-framework element should silently discard the binding.
+	  r: jackson
+
 2009-08-18  Jackson Harper  <jackson@ximian.com>
 
 	* ManagedXamlLoader.cs: The content property must be specified on
